Repo for client is fully implemented. Some debugging cmds are still present. ATM the CLient does not work. Need to refactor the UI

--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -18,7 +18,7 @@ add_executable(Client
     src/Repo/Entrance.cpp
     src/Repo/Room.hpp
     src/Repo/Room.cpp
-    src/Repo/Housee.hpp
+    src/Repo/House.hpp
     src/Repo/House.cpp
     src/main.cpp)
 
